<resources>
    <string name="app_name">BwareArea</string>
    <string name="point_of_interest_database">Point of interest database</string>
    <string name="set_file_to_use">Set file to import</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="unknown">Unknown</string>
    <string name="fire_cam">Red light</string>
    <string name="static_cam">Static</string>
    <string name="range_start">Start range</string>
    <string name="range_stop">End range</string>
    <string name="type_2">Type 2</string>
    <string name="type_3">Type 3</string>
    <string name="select_file">Select file to import</string>
    <string name="started_service">Started service</string>
    <string name="base_distance">Warn at %dm from POI</string>
    <string name="import_completed">Import completed.</string>
    <string name="import_starting">Import starting...</string>
    <string name="import_x_poi">Imported %d POI</string>
    <string name="cant_get_location_manager">Could not get precise location. Please fix!</string>
    <string name="indexing">Indexing</string>
    <string name="done">Done</string>
    <string name="point_of_interest_database_with_poi">Point of interest currently in database : %d</string>
    <string name="limit_to_range_only">Only limit to range checking</string>
    <string name="bluetooth_trigger">Start when detecting bluetooth device</string>
    <string name="need_bluetooth_connected">Please connect to your bluetooth device before toggling this switch in order to remember what device to use</string>
    <string name="bluetooth_device_label">Starting when detecting connection with %s</string>
    <string name="alert_overspeed">Alert upon overspeed</string>
    <string name="base_overspeed">Alert when %dkm/h above POI\'s speed</string>
    <string name="bware_is_running">Bware is running</string>
    <string name="tap_to_settings">Tap here to show settings</string>
    <string name="title_activity_why_permission">Why Bware need these permissions</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name_permissions">BwareArea Permissions</string>
    <string name="perm_page0">These screens will explain the permissions this application needs to run. Swipe right to continue.</string>
    <string name="perm_title0">Welcome to BwareArea.</string>
    <string name="error_permissions">Draw over other app permission not available. Can\'t start the application without the permission.</string>
    <string name="distance_to_warn_before">Distance to warn before</string>
    <string name="perm_title1">Location requirement</string>
    <string name="perm_title2">Overlay requirement</string>
    <string name="perm_title3">Read and write external storage requirement</string>
    <string name="perm_title4">Disable Dozing</string>
    <string name="perm_title5">Well done!</string>
    <string name="perm_page1">This application needs to access the GPS to figure out the current position.</string>
    <string name="perm_page2">This application needs right to draw on top of other activities to display its widget.</string>
    <string name="perm_page3">This application needs to access the external storage for importing your POI file and logging the GPX tracks.</string>
    <string name="perm_page4">This application needs to disable doze optimization to react to GPS updates frequently.</string>
    <string name="perm_page5">You\'re done, let\'s start importing now!</string>
    <string name="quit">Quit</string>
    <string name="log_positions">Remember all positions in a GPX when approaching a POI</string>
</resources>
